--- a/DISNEY-HOTSTAR/style.css
+++ b/DISNEY-HOTSTAR/style.css
@@ -1,58 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
-    color: white;
 }
-main {
+.main {
     width: 100%;
-    background-color: gray;
+    background-color: grey;
     position: relative;
     display: flex;
 }
-
-/** sidebar area */
 .navigation {
     width: 5%;
     height: 100vh;
+    /* background-color: orange; */
     background-color: #16181f;
-    display: flex;
-    flex-direction: column;
-    row-gap: 180px;
+    padding: 30px 0;
     position: fixed;
 }
-.logo-main {
-    padding: 20px 10px;
-}
-.logo-group {
-    width: 100%;
-    height: 300px;
-    /* background-color: yellow; */
-}
-.logo-lists {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-.logo-img {
-    height: 18px;
-    width: 18px;
-}
-.logo-list {
-    list-style: none;
-    opacity: 0.7;
-}
-.logo-list:hover {
-    opacity: 1;
-    transform: scale(1.2);
-}
-
-/** main page */
 .main-page {
     width: 95%;
     position: relative;
@@ -60,8 +27,45 @@ main {
     flex-direction: column;
     margin-left: 5%;
 }
+.logo {
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    justify-content: center;
+}
+.nav {
+    width: 100%;
+    /* background-color: greenyellow; */
+    position: absolute;
+    top: 0;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.nav-links {
+    width: 100%;
+    /* background-color: yellow; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+    color: white;
+}
+.nav-link {
+    margin: 20px 0;
+    opacity: 0.7;
+    transition: 0.2s;
+}
+.nav-link:hover {
+    opacity: 1;
+    transform: scale(1.1);
+}
+.nav-1-img {
+    width: 20px;
+}
+/* main page */
 
-/** banner area */
+/* fixed banner */
 .banner {
     width: 100%;
     height: 90vh;
@@ -69,11 +73,12 @@ main {
     display: flex;
     justify-content: flex-end;
     position: fixed;
+    overflow: hidden;
 }
 .banner-overlay-1 {
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, #16181f 20%, transparent, transparent);
+    background: linear-gradient(to right, #16181f 16%, transparent, transparent);
     position: absolute;
 }
 .banner-overlay-2 {
@@ -83,94 +88,173 @@ main {
     position: absolute;
 }
 .banner-img {
-    height: 105%;
+    height: 110%;
 }
-/** main area */
 .main-area {
     width: 100%;
     height: 200vh;
-    /* background-color: green; */
+    background-color: green;
     position: absolute;
     margin-top: 42vh;
 }
-
 .banner-movie-detail {
     width: 100%;
-    /* background-color: yellow; */
+    /* background-color: red; */
+    padding: 20px 10px;
 }
 .detail {
-    width: 25%;
+    width: 24%;
     height: 100%;
     /* background-color: red; */
-    padding: 10px;
 }
-.title-img {
+.banner-title-img {
     width: 100%;
 }
 .movie-detail {
     width: 100%;
-    /* background-color: antiquewhite; */
+    font-weight: bold;
+    display: flex;
+    column-gap: 6px;
     display: flex;
     align-items: center;
-    column-gap: 7px;
-    font-weight: bold;
+    font-size: 15px;
     margin-top: 10px;
+    color: white;
 }
+/* span is an inline element, for an inline element we cannot give height and width so, we are making it block */
 .dot {
     width: 4px;
     height: 4px;
-    background-color: grey;
     display: block;
+    background-color: gray;
     border-radius: 50%;
 }
 .badge {
-    padding: 3px 7px;
     background-color: grey;
+    padding: 3px 7px;
     border-radius: 5px;
+    opacity: 0.8;
 }
 .movie-description {
+    font-size: 14px;
     font-weight: 500;
-    font-size: 15px;
     margin-top: 20px;
+    color: white;
+    opacity: 0.7;
 }
 .tag {
-    font-weight: 600;
+    font-weight: bolder;
     font-size: 17px;
     margin-top: 20px;
+    color: white;
 }
 .call-to-action {
     width: 100%;
-    height: 50px;
     /* background-color: red; */
     margin-top: 40px;
     display: flex;
-    column-gap: 15px;
+    column-gap: 20px;
 }
 .cta-big {
     padding: 12px 70px;
     font-weight: bold;
     font-size: 19px;
-    background-color: hsla(0, 0%, 100%, 0.1);
-    opacity: 0.3;
+    background-color: hsla(0, 0%, 100%, 0.08);
+    border: none;
     border-radius: 5px;
+    color: white;
     cursor: pointer;
+    transition: 0.4s;
 }
-.play{
-        color: white;
+.cta-small {
+    padding: 12px 16px;
+    font-weight: bold;
+    font-size: 19px;
+    background-color: hsla(0, 0%, 100%, 0.08);
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    transition: 0.4s;
+}
+.cta-big:hover, .cta-small:hover {
+    background-color: hsla(0, 0%, 100%, 0.3);
+    transform: scale(1.02);
 }
 
-.cta-small {
-    padding: 12px 14px;
-    font-weight: bold;
-    color: yellow;
-    font-size: 19px;
-    background-color: hsla(0, 0%, 100%, 0.1);
-    opacity: 0.3;
-    border-radius: 5px;
-    color: black;
-    cursor: pointer;
+/* movies section css*/
+.movies-section{
+    width: 100%;
+    padding: 20px 0 20px 10px;
+    background-color: red;
 }
-.cta-big:hover,
-.cta-small:hover {
-        background-color: hsla(0, 0%, 100%, 0.3);
+.movies-section-header{
+    /* background-color: yellow; */
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    padding-right: 15px;
+}
+.section-title{
+    font-size: 20px;
+    font-weight: 600;
+}
+.va{
+    font-weight: 500;
+    cursor: pointer;
+    opacity: 0.8;
+    transition: 0.2s;
+}
+.va:hover{
+    opacity: 1;
+}
+.movies{
+    width: 100%;
+    background-color: grey;
+    margin-top: 5px;
+    position: relative;
+}
+.swiper-left{
+/* background-color: yellow; */
+background: linear-gradient(88deg, #0f1014 0.62%, rgba(15, 16, 20, 0) 99.33%);
+width: 3%;
+height: 100%;
+position: absolute;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 25px;
+color: white;
+}
+.swiper-right{
+background: linear-gradient(269.25deg,#0f1014 0.62%, rgba(15, 16, 20, 0) 99.33%);
+/* background-color: yellow; */
+width: 3%;
+height: 100%;
+position: absolute;
+right: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 25px;
+color: white;
+}
+.slider{
+    width: fit-content;
+    background-color: purple;
+    display: flex;
+    column-gap: 8px;
+    padding: 10px;
+}
+.movie{
+    height: 315px;
+    width: 237px;
+    background-color: blue;
+    overflow: hidden;
+    border-radius: 10px;
+    
+}
+.movie-img{
+    width: 100%;
+    margin-top: -50px;
 }
