--- a/DISNEY-HOTSTAR/style.css
+++ b/DISNEY-HOTSTAR/style.css
@@ -100,12 +100,13 @@
 .banner-movie-detail {
     width: 100%;
     /* background-color: red; */
-    padding: 20px 10px;
+    padding: 20px 0;
 }
 .detail {
-    width: 24%;
+    width: 26%;
     height: 100%;
-    /* background-color: red; */
+    /* background-color: fuchsia; */
+    padding: 10px;
 }
 .banner-title-img {
     width: 100%;
@@ -189,10 +190,10 @@
     background-color: red;
 }
 .movies-section-header{
+    color: white;
     /* background-color: yellow; */
     display: flex;
     justify-content: space-between;
-    color: white;
     padding-right: 15px;
 }
 .section-title{
@@ -201,9 +202,9 @@
 }
 .va{
     font-weight: 500;
-    cursor: pointer;
     opacity: 0.8;
     transition: 0.2s;
+    cursor: pointer;
 }
 .va:hover{
     opacity: 1;
@@ -215,29 +216,27 @@
     position: relative;
 }
 .swiper-left{
-/* background-color: yellow; */
-background: linear-gradient(88deg, #0f1014 0.62%, rgba(15, 16, 20, 0) 99.33%);
-width: 3%;
-height: 100%;
-position: absolute;
-display: flex;
-justify-content: center;
-align-items: center;
-font-size: 25px;
-color: white;
+    background: linear-gradient(88deg, #0f1014 0.62%, rgba(15, 16, 20, 0) 99.33%);
+    position: absolute;
+    width: 3%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    color: white;
 }
 .swiper-right{
-background: linear-gradient(269.25deg,#0f1014 0.62%, rgba(15, 16, 20, 0) 99.33%);
-/* background-color: yellow; */
-width: 3%;
-height: 100%;
-position: absolute;
-right: 0;
-display: flex;
-justify-content: center;
-align-items: center;
-font-size: 25px;
-color: white;
+    background: linear-gradient(269.25deg, #0f1014 0.62%, rgba(15, 16, 20, 0) 99.33%);
+    position: absolute;
+    right: 0;
+    width: 3%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    color: white;
 }
 .slider{
     width: fit-content;
@@ -252,7 +251,6 @@ color: white;
     background-color: blue;
     overflow: hidden;
     border-radius: 10px;
-    
 }
 .movie-img{
     width: 100%;
