--- a/DISNEY-HOTSTAR/style.css
+++ b/DISNEY-HOTSTAR/style.css
@@ -69,7 +69,7 @@
 .banner {
     width: 100%;
     height: 90vh;
-    background-color: red;
+    /* background-color: red; */
     display: flex;
     justify-content: flex-end;
     position: fixed;
@@ -93,7 +93,7 @@
 .main-area {
     width: 100%;
     height: 200vh;
-    background-color: green;
+    background-color: transparent;
     position: absolute;
     margin-top: 42vh;
 }
@@ -187,7 +187,7 @@
 .movies-section{
     width: 100%;
     padding: 20px 0 20px 10px;
-    background-color: red;
+    background-color: #16181f;
 }
 .movies-section-header{
     color: white;
@@ -211,9 +211,10 @@
 }
 .movies{
     width: 100%;
-    background-color: grey;
+    /* background-color: grey; */
     margin-top: 5px;
     position: relative;
+    overflow: hidden;
 }
 .swiper-left{
     background: linear-gradient(88deg, #0f1014 0.62%, rgba(15, 16, 20, 0) 99.33%);
@@ -240,19 +241,34 @@
 }
 .slider{
     width: fit-content;
-    background-color: purple;
+    /* background-color: purple; */
     display: flex;
     column-gap: 8px;
     padding: 10px;
+    transition: 1s;
 }
 .movie{
     height: 315px;
     width: 237px;
-    background-color: blue;
+    /* background-color: blue; */
     overflow: hidden;
     border-radius: 10px;
+    position: relative;
 }
 .movie-img{
-    width: 100%;
+    width: 237px;
     margin-top: -50px;
+}
+
+.movies-top .movie{
+    width: 275px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.top{
+    margin-left: -30px;
+    width: 278px;
+    position: absolute;
 }
