--- a/DISNEY-HOTSTAR/style.css
+++ b/DISNEY-HOTSTAR/style.css
@@ -16,7 +16,7 @@
     width: 5%;
     height: 100vh;
     /* background-color: orange; */
-    background-color: #16181f;
+    background-color: #0f1014;
     padding: 30px 0;
     position: fixed;
 }
@@ -92,7 +92,7 @@
 }
 .main-area {
     width: 100%;
-    height: 200vh;
+    height: 300vh;
     background-color: transparent;
     position: absolute;
     margin-top: 42vh;
@@ -187,7 +187,7 @@
 .movies-section{
     width: 100%;
     padding: 20px 0 20px 10px;
-    background-color: #16181f;
+    background-color: #0f1014;
 }
 .movies-section-header{
     color: white;
@@ -226,6 +226,7 @@
     align-items: center;
     font-size: 22px;
     color: white;
+    z-index: 50;
 }
 .swiper-right{
     background: linear-gradient(269.25deg, #0f1014 0.62%, rgba(15, 16, 20, 0) 99.33%);
@@ -238,6 +239,7 @@
     align-items: center;
     font-size: 22px;
     color: white;
+    z-index: 50;
 }
 .slider{
     width: fit-content;
@@ -258,8 +260,17 @@
 .movie-img{
     width: 237px;
     margin-top: -50px;
+    position: absolute;
 }
 
+.movie-card{
+    width: 336px;
+    height: 394px;
+    background-color: blue;
+    position: absolute;
+}
+
+/* top 10 in india today css */
 .movies-top .movie{
     width: 275px;
     display: flex;
@@ -271,4 +282,84 @@
     margin-left: -30px;
     width: 278px;
     position: absolute;
+}
+/* brands section css */
+.brands{
+    width: 100%;
+    padding: 10px 10px;
+    background-color: #0f1014;
+    display: flex;
+    column-gap: 10px;
+}
+.brand{
+    width: 281px;
+    height: 158px;
+    /* background-color: blue; */
+    border-radius: 10px;
+    overflow: hidden;
+}
+.brand img{
+    width: 100%;
+}
+
+/* sports sections css */
+
+.sports{
+    width: 100%;
+    padding: 10px 0 10px 10px;
+    background-color: #0f1014;
+    color: white;
+    position: relative;
+    overflow: hidden;
+}
+.sport{
+    width: 340px;
+    max-height: 287px;
+    /* background-color: blue; */
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.sport:hover{
+    background: hsla(0, 0%, 100%, 0.08);
+    transform: scale(1.03);
+    z-index: 10;
+}
+.sport-img{
+    width: 100%;
+    height: 191px;
+    background-color: green;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+}
+.sport-img img{
+    width: 100%;
+    position: absolute;
+}
+.sport-img i{
+    color: white;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-size: 20px;
+}
+.sports-title{
+    font-size: 17px;
+    font-weight: 600;
+    margin-top: 5px;
+    padding: 0 10px;
+}
+.sports-description{
+    font-size: 13px;
+    margin-top: 5px;
+    padding: 0 10px;
+    padding-bottom: 5px;
+    opacity: 0;
+    transition: 0.3s;
+    font-weight: 200;
+    word-spacing: 2px;
+}
+.sport:hover .sports-description{
+    opacity: 0.7;
 }
