--- a/Travel Website/style.css
+++ b/Travel Website/style.css
@@ -78,9 +78,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 80px; 
-        row-gap: 40px;
-        
+        margin-top: 60px; 
+        row-gap: 40px;  
 }
 .banner-heading{
         font-size: 70px;
@@ -91,7 +90,7 @@
         background-color: black;
         color: white;
         font-size: 18px;
-        padding: 10px 30px;
+        padding: 10px 15px;
         border: 2px solid black;
 }
 .booking{
@@ -121,4 +120,185 @@
 .book-btn{
         padding: 5px;
         border: none;
+}
+
+/* about css */
+.about{
+        width: 100%;
+        padding: 50px 15%;
+        background-color: white;
+        font-size: 25px;
+        word-spacing: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 10px;
+        font-weight: 200;
+}
+.highlight{
+        font-weight: bold;
+        font-size: 30px;
+}
+.icon{
+        color: #01cefc;
+        font-size: 40px;
+}
+
+/* rooms css */
+.rooms{
+        width: 100%;
+        padding: 50px 15%;
+        background-color: rgba(246, 242, 242, 0.616);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
+.section-title{
+        font-size: 30px;
+}
+.rooms-area{
+        width: 100%;
+        padding: 20px 0px;
+        /* background-color: red; */
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 5%;
+        row-gap: 50px;
+        margin-top: 50px;
+}
+.room{
+        width: 30%;
+        background-color: white;
+}
+.room-img{
+        width: 100%;
+        height: 210px;
+        /* background-color: yellow; */
+        overflow: hidden;
+}
+.room-image{
+        width: 100%;
+
+}
+.rm{
+        height: 106.5%;
+}
+.room-details{
+        padding: 20px;
+        /* background-color: green; */
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 10px;
+}
+
+/* Subscribe section css */
+.subscribe{
+        width: 100%;
+        padding: 50px 15%;
+        /* background-color: red; */
+        display: flex;
+        justify-content: space-between;
+}
+.sub-text{
+        width: 30%;
+        padding: 20px;
+        /* background-color: skyblue; */
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+}
+.logo2{
+      width: 50%; 
+      /* background-color: yellow; */
+}
+.sub-desc{
+        font-size: 15px;
+}
+.sub-area{
+        width: 35%;
+        padding: 20px;
+        /* background-color: green; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        row-gap: 20px;
+}
+.sub-inp{
+        width: 65%;
+        height: 50px;
+}
+.sub-form{
+        display: flex;
+}
+
+/* food css */
+.food{
+        width: 100%;
+        height: 80vh;
+        padding: 50px 15%;
+        background-color: white;
+        background-image: url('./images/restaurant.jpg');
+        background-repeat: no-repeat;
+        background-size: contain;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+}
+.food-details{
+        width: 75%;
+        padding: 50px;
+        /* background-color: red; */
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 20px;
+}
+.food-header{
+        font-size: 45px;
+}
+
+/* premium css */
+.premium{
+        width: 100%;
+        padding: 50px 15%;
+        background-color: rgba(246, 242, 242, 0.616);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
+.prooms-area{
+        width: 100%;
+        height: 800px;
+        /* background-color: green; */
+        margin-top: 50px;
+        display: flex;
+        justify-content: space-between;
+}
+.proom-img{
+        width: 30%;
+        height: 800px;
+        /* background-color: yellow; */
+        overflow: hidden;
+}
+.proom-image{
+        width: 100%;        
+        margin-top: -110px;
+}
+.proom-boxes{
+        width: 65%;
+        height: 800px;
+        /* background-color: skyblue; */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+}
+.proom-box{
+        width: 100%;
+        padding: 20px;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 10px;
 }
