--- a/Portfolio Website/style.css
+++ b/Portfolio Website/style.css
@@ -33,9 +33,7 @@
 .logo h1{
         color: white;
 }
-.logo-img{
-      width: 100%;
-}
+
 .socials{
         width: 25%;
         height: 50px;
@@ -102,7 +100,7 @@
 
 .pic{
         width: 50%;
-        background-color: #f2cf50;
+        /* background-color: #f2cf50; */
         /* padding: 20px 10px 0px 10px; */
         position: absolute;
         z-index: 10;
@@ -125,22 +123,77 @@
 .navigation{
         width: 100%;
         padding: 20px 12%;
-        background-color: red;
+        /* background-color: yellow; */
+        margin-top: -70px;
+        position: absolute;
 }
 .nav{
         width: 100%;
-        height: 100px;
+        /* height: 100px; */
+        padding: 20px 20px;
         background-color: black;
+        display: flex;
+        column-gap: 20px;
+        border-radius: 10px;
 }
 .nav-item{
-        width: 250px;
-        height: 100px;
-        background-color: green;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        width: 100px;
+        padding: 20px 0px;
+        background-color: #2e2e2e;
         column-gap: 20px;
-        font-size: 21px;
+        font-size: 20px;
         color: white;
+        border-radius: 10px;
+        overflow: hidden; 
+        transition: 0.2s;
+        cursor: pointer;
+}
+.nav-item:hover{
+        width: 250px;
+}
+.nav-link{
+        width: 250px;
+        /* background-color: red; */
+}
+.nav-link > i{
+        display: inline-block;
+        margin-left: 40px;
+        color: #e56f14;
+}
+.nav-link > p{
+        display: inline-block;
+        margin-left: 60px;
+        transition: 0.2s; 
+}
+.nav-item:hover .nav-link > p{
+        margin-left: 10px;
+}
 
+/* content  css  */
+
+.content{
+        width: 100%;
+        padding: 30px 12%;
+        background-color: red;
+}
+.display-area{
+        width: 100%;
+        padding: 20px 30px;
+        background-color: blue;
+        margin-top: 70px;
+        border-radius: 10px;
+}
+.about-me{
+        width: 100%;
+        padding: 10px 0px;
+        background-color: yellow;
+        display: flex;
+        column-gap: 6%;
+        flex-wrap: wrap;
+        row-gap: 30px;
+}
+.about{
+        width: 47%;
+        padding: 10px;
+        background-color: grey;
 }
