--- a/Portfolio Website/style.css
+++ b/Portfolio Website/style.css
@@ -174,19 +174,19 @@
 .content{
         width: 100%;
         padding: 30px 12%;
-        background-color: red;
+        background-color: #474545;
 }
 .display-area{
         width: 100%;
         padding: 20px 30px;
-        background-color: blue;
+        background-color: #2e2e2e;
         margin-top: 70px;
         border-radius: 10px;
 }
 .about-me{
         width: 100%;
         padding: 10px 0px;
-        background-color: yellow;
+        /* background-color: yellow; */
         display: flex;
         column-gap: 6%;
         flex-wrap: wrap;
@@ -194,6 +194,126 @@
 }
 .about{
         width: 47%;
+        padding: 20px;
+        color: white;
+        background-color: #1d1d1c;
+        border-radius: 10px;
+}
+
+.about > ul{
+        list-style-type: none;
+        margin-top: 10px;
+}
+.skills{
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 10px;
+        column-gap: 10px;
+}
+.skills > li{
         padding: 10px;
-        background-color: grey;
+        background-color: rgb(151, 142, 142);
+        border-radius: 10px;
+}
+
+/* servies css */
+
+.services{
+        width: 100%;
+        padding: 10px 0px;
+        /* background-color: yellow; */
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 4%;
+        row-gap: 40px;
+}
+.service{
+        width: 22%;
+        padding: 20px;
+        background-color: red;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 10px;
+        border-radius: 10px;
+        color: white;
+        background-color: #1d1c1c;
+}
+.service > i{
+        padding: 30px;
+        font-size: 90px;
+        align-self: center;
+}
+
+/* works css */
+
+.works{
+        width: 100%;
+        padding: 10px 0px;
+        /* background-color: yellow; */
+        display: flex;
+        column-gap: 4%;
+        row-gap: 40px;
+        flex-wrap: wrap;
+}
+.work{
+        width: 22%;
+        height: 300px;
+        background-color: red;
+        background-color: #1d1c1c;
+        display: flex;
+        cursor: pointer;
+        border-radius: 10px;
+        overflow: hidden;
+         background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+}
+.work-overlay{
+        width: 100%;
+        height: 100%;
+        background-color: rgba(229, 111, 20, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-size: 25px;
+        margin-top: 125%;
+        transition: 0.3s;
+
+}
+.work:hover .work-overlay{
+        margin-top: 0px;
+}
+.work1{
+        background-image: url('./images/work1.png');      
+}
+.work2{
+        background-image: url('./images/work2.png');
+}
+.work3{
+        background-image: url('./images/work3.webp');      
+}
+.work4{
+        background-image: url('./images/work4.png');
+}
+.work5{
+        background-image: url('./images/work6.png');     
+}
+
+/* hiding css */
+
+/* .about-section{
+        display: none;
+} */
+.services-section{
+        display: none;
+}
+.work-section{
+        display: none;
+}
+
+.active{
+        background-color: rgb(212, 212, 55);
+        transition: 0.3s;
 }
