--- a/E-Commerce Website/style.css
+++ b/E-Commerce Website/style.css
@@ -101,7 +101,7 @@
     font-size: 45px;
 }
 .btn {
-    padding: 12px 25px;
+    padding: 10px 20px;
     background-color: black;
     border: 1px solid black;
     color: white;
@@ -191,4 +191,209 @@
 .featured-box-2-box-2:hover img,
 .featured-box-2-box-3:hover img {
     transform: scale(1.1);
+}
+
+/* products css */
+
+.products{
+    width: 100%;
+    padding: 30px 20%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    align-items: center;
+}
+
+.section-title{
+    font-family: futura;
+}
+.products-list{
+    width: 100%;
+    padding: 20px 0px;
+    /* background-color: yellow; */
+    display: flex;
+    justify-content: space-between;
+}
+.product{
+    width: 22%;
+    height: 310px;
+    /* background-color: green; */
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    font-family: futura;
+    font-size: 18px;
+}
+.product:hover .main-image{
+    transform: scale(1.2);
+    opacity: 0;
+}
+.product:hover .effect-image{
+    transform: scale(1);
+    opacity: 1;
+}
+.product:hover .overlay-image{
+    margin-top: 0px;
+}
+.product-image{
+    width: 100%;
+    height: 270px;
+    /* background-color: blue; */
+    position: relative;
+    overflow: hidden;
+}
+
+.product-image img{
+    width: 100%;
+}
+.main-image{
+    width: 100%;
+    height: 100%;
+    /* background-color: purple; */
+    position: absolute;
+    transition: 0.3s;
+}
+.effect-image{
+    width: 100%;
+    height: 100%;
+    /* background-color: cyan; */
+    position: absolute;
+    opacity: 0;
+    transform: scale(1.2);
+    transition: 0.3s;
+}
+.overlay-image{
+    width: 100%;
+    height: 100%;
+    /* background-color: brown; */
+    position: absolute;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding: 10%;
+    margin-top: 100px;
+    transition: 0.2s;
+}
+.product-details{
+    padding: 5px;
+    font-size: 17px;
+    display: flex;
+    justify-content: space-between;
+    font-family: futura;
+}
+
+/* categories css */
+
+.categories{
+    width: 100%;
+    padding: 30px 20%;
+    /* background-color: red; */
+    display: flex;   
+    justify-content: space-between;
+}
+
+.category{
+    width: 33%;
+    /* background-color: yellow; */
+}
+.cat-image{
+    width: 100%;
+    height: 320px;
+    /* background-color: blue; */
+    overflow: hidden;
+}
+.cat-image > img{
+    width: 100%;
+    transition: 0.2s;
+}
+.cat-image:hover img{
+    transform: scale(1.2);
+}
+
+/* shop from insta section css */
+
+.insta{
+    width: 100%;
+    padding: 30px 20%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    align-items: center;
+}
+.posts{
+    width: 100%;
+    padding: 20px 0px;
+    /* background-color: yellow; */
+    display: flex;
+    justify-content: space-between;
+}
+.post-image{
+    width: 16%;
+    height: 160px;
+    /* background-color: green; */
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+}
+.post-image  img{
+    width: 100%;
+    transition: 0.2s;
+}
+.post-image:hover  img{
+    transform: scale(1.2);
+}
+.post-image  i{
+    position: absolute;
+    margin: 10px;
+    font-size: 25px;
+    z-index: 5;
+}
+
+/* footer css */
+.footer{
+    width: 100%;
+    padding: 30px 20%;
+    background-color: #f6f5fa;
+    font-family: futura;
+    display: flex;
+    justify-content: space-between;
+    color: #1d1d1d;
+}
+.footer-section{
+    width: 32%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+.footer-list{
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    row-gap: 8px;
+}
+.border-line{
+    border-top: 1px solid lightgray;
+    width: 70%;
+    margin-top: 20px;
+    
+}
+.socials{
+    margin-top: 20px;
+    display: flex;
+    column-gap: 20px;
+    font-size: 20px;
+}
+.sub{
+    margin-top: 30px;
+}
+input{
+    width: 55%;
+    height: 38px;
+    border-radius: 30px;
+    border: none;
+    border: 1px solid lightgray;
 }
